# DiscordToWhatsAppBot

./: README.md  app.cabal  lastMessageTimeStamp.txt
app/: Main.hs
