cabal-version:      2.4
name:               app
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A Discord to WhatsApp Bot

-- A longer description of the package.
description: A prototype for a bot which can sync messages from a Discord channel to WhatsApp, using Twilio.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Hamish Starling, Tom Smail, Quentin Duff 

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      aeson >= 2.1.0.0,
                      http-conduit >= 2.3.8,
                      bytestring >=0.10.12.0,
                      load-env >= 0.2.1.0,
                      iso8601-time >= 0.1.5,
                      time >= 1.9.3 

    hs-source-dirs:   app
    default-language: Haskell2010
